quick fix for teasers list block spacing

--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -1202,6 +1202,7 @@
 
       @screen xl {
         grid-template-columns: repeat(3, 1fr);
+        padding-block: 7rem;
       }
     }
 
