--- a/src/scss/pages/join-the-movement.scss
+++ b/src/scss/pages/join-the-movement.scss
@@ -257,6 +257,7 @@
 
       @screen xl {
         grid-template-columns: repeat(3, 1fr);
+        padding-block: 7rem;
       }
     }
 
